--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/ChamodDinuka/level2_backend#readme",
   "dependencies": {
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.5.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
